# meta2date-filename

./: DataFileChanger.py  LICENSE  README.md  pyproject.toml
src/meta2date_filename/: __init__.py  __main__.py  constants.py  gui.py  renamer.py
